# relatorio-pedidos-fraude-pyspark

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
scripts/: download_datasets.py
src/: main.py
src/config/: settings.py  settings.yaml
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: business_logic.py
src/session/: spark_session.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_business_logic.py  test_settings.py
