[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relatorio-pedidos-fraude-pyspark"
version = "0.1.0"
authors = [
  { name = "Ayrton Fernandes Tridico" },
]
description = "Pipeline PySpark orientado a objetos que gera o relatório de pedidos com pagamento recusado e avaliação de fraude legítima. Trabalho Final de Data Engineering Programming - FIAP."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark==4.1.1",
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
    "build==1.3.0",
]

[project.scripts]
run-relatorio-pedidos = "main:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: Testes unitários isolados (sem I/O externo)",
    "integration: Testes de integração (orquestração entre componentes)",
]
addopts = "-v"
